Añadir nueva animación + actualizar README
-Se agregó una nueva animación (borde).
-Se actualizó el README para explicar el
funcionamiento de todas las animaciones aprendidas.

--- a/index.html
+++ b/index.html
@@ -41,27 +41,26 @@
           <li><a href="#hero" class="underline">Inicio</a></li>
           <li><a href="#proyectos" class="underline">Proyectos</a></li>
           <li><a href="#contactos" class="underline">Contactos</a></li>
-          <li><a href="galeria" class="underline">Galería</a></li>
+          <li><a href="#galeria" class="underline">Galería</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="hero">
-        <p>Hola, mi nombre es</p>
-        <h1>Micaela Asselborn.</h1>
-        <h3>Me gusta construir cosas en la web.</h3>
-        <p>
-          Soy una desarrolladora web en progreso. Llevo unos 7 meses como
-          autodidacta siguiendo bootcamps como freeCodeCamp y The Odin Project,
-          y recientemente decidí anotarme a una diplomatura de Desarrollo Web
-          Fullstack en la UTN.
-        </p>
-        <img
-          src="./images/foto-cv.jpeg"
-          alt="Foto de Micaela"
-          width="80%"
-          class="centrada"
-        />
+        <div class="presentacion">
+          <p>Hola, mi nombre es</p>
+          <h1>Micaela Asselborn.</h1>
+          <h3>Me gusta construir cosas en la web.</h3>
+          <p>
+            Soy una desarrolladora web en progreso. Llevo unos 7 meses como
+            autodidacta siguiendo bootcamps como freeCodeCamp y The Odin
+            Project, y recientemente decidí anotarme a una diplomatura de
+            Desarrollo Web Fullstack en la UTN.
+          </p>
+        </div>
+        <div class="selfie">
+          <img src="./images/foto-cv.jpeg" alt="Foto de Micaela" width="80%" />
+        </div>
       </section>
       <section id="proyectos">Sección de proyectos con Grid responsivo</section>
       <section id="contactos">Formulario de contacto responsive</section>
