Arreglar errores gráficos
Se mejora la visualización en distintos tamaños de
pantallas.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
       </section>
       <footer>
         <p>2025</p>
-        <p>Micaela Asselborn</p>
+        <p>
+          <a
+            href="https://www.instagram.com/mica_asselborn/?hl=es-la"
+            class=".underline"
+            >Micaela Asselborn</a
+          >
+        </p>
         <p>
           Proyecto de portafolio ficticio como práctica para clase de Desarrollo
           Web UTN
